testsuite/tests/annotations/should_fail/T19374c.stderr

T19374c.hs:5:15: error: [GHC-58481]
    Parse error on input ‘T19347c.%%%’.
    Expected one of ':', '-', '.', VARSYM, CONSYM
